# ultimate_tex

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  release_cli.yml  rust.yml
ultimate_tex/: Cargo.toml  Dioxus.toml  README.md
ultimate_tex/src/: app.rs  lib.rs  main.rs
ultimate_tex_app/: Cargo.toml  Dioxus.toml  README.md
ultimate_tex_app/icons/: icon.icns
ultimate_tex_app/src/: app.css  app.rs  main.rs  theme.rs
ultimate_tex_cli/: Cargo.toml
ultimate_tex_cli/src/: main.rs
ultimate_tex_lib/: Cargo.toml
ultimate_tex_lib/src/: lib.rs
ultimate_tex_tauri/: package-lock.json  package.json
ultimate_tex_tauri/src/: app.css  app.html
ultimate_tex_tauri/src-tauri/: Cargo.toml  tauri.conf.json
ultimate_tex_tauri/src-tauri/icons/: icon.icns
ultimate_tex_tauri/src-tauri/src/: main.rs
ultimate_tex_tauri/src/lib/: Files.svelte
ultimate_tex_tauri/src/routes/: +layout.svelte  +page.svelte
