[package]
name = "ultimate_tex"
version = "0.3.0"
authors = ["ScanMountGoat <>"]
edition = "2021"

[dependencies]
dioxus-desktop = "0.6.2"
dioxus = {version = "0.6.2", features = ["desktop"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ultimate_tex_lib = { path = "../ultimate_tex_lib" }
image_dds = { version = "0.7.0", features = ["ddsfile", "image", "serde"] }
rayon = "1.7.0"
open = "5.0.0"
globwalk = "0.8.1"
strum = { version = "0.26.2", features = ["derive"] }
rfd = "0.12.0"
base64 = "0.21.7"
tokio = "1.0"
directories = "6.0.0"