[package]
name = "ultimate_tex"
version = "0.3.0"
authors = ["ScanMountGoat <>"]
edition = "2024"

[dependencies]
dioxus-desktop = "0.7.0-rc.0"
dioxus = {version = "0.7.0-rc.0", features = ["desktop"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ultimate_tex_lib = { path = "../ultimate_tex_lib" }
image_dds = { version = "0.7.0", features = ["ddsfile", "image", "serde"] }
rayon = "1.7.0"
open = "5.0.0"
globwalk = "0.9.1"
strum = { version = "0.26.3", features = ["derive"] }
rfd = "0.15.4"
base64 = "0.22.1"
tokio = "1.0"
directories = "6.0.0"