[package]
name = "ultimate_tex_app"
version = "0.1.1"
edition = "2021"
description = "Batch convert Smash Ultimate textures"

[dependencies]
ultimate_tex = { path = "../ultimate_tex" }
eframe = "0.21.0"
egui_extras = { version = "0.21.0", features = ["image"] }
image = "0.24.5"
image_dds = "0.1.1"
strum = { version = "0.24", features = ["derive"] }
rfd = "0.11.0"
globwalk = "0.8.1"
rayon = "1.6.1"
open = "3"

[package.metadata.bundle]
name = "ultimate_tex"