[package]
name = "ultimate_tex_tauri"
version = "0.2.2"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "=1.0.171", features = ["derive"] }
tauri = { version = "1.4.1", features = ["dialog", "shell-open"] }
ultimate_tex = { path = "../../ultimate_tex" }
image = "0.24.5"
image_dds = { version = "0.3.0", features = ["ddsfile", "image", "serde"] }
rayon = "1.7.0"
open = "5.0.0"
globwalk = "0.8.1"
strum = { version = "0.24", features = ["derive"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
